--- a/pages/blog.html
+++ b/pages/blog.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,0,0" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -12,6 +13,21 @@
   </head>
   <body>
     <%- include('./layout/header'); -%>
+    <div class="bg-second mb-6 mb-sm-4">
+        <div class="container">
+          <div class="d-flex justify-content-space-between align-items-center">
+            <ul class="d-flex py-13">
+              <li><a href="" class="text-white fs-5 fw-bold me-12 fs-sm-4 me-sm-6-1">最新消息</a></li>
+              <li><a href="" class="text-white fs-5 fw-bold me-12 fs-sm-4 me-sm-6-1">特別企劃</a></li>
+              <li><a href="" class="text-white fs-5 fw-bold me-12 fs-sm-4 me-sm-6-1">新品上市</a></li>
+              <li><a href="" class="text-white fs-5 fw-bold fs-sm-4">鏡框小知識</a></li>
+            </ul>
+            <a href="" class="text-white icon d-sm-none"><span class="material-symbols-outlined">
+              search
+              </span></a>
+          </div>
+        </div>
+      </div>
     <div class="blog mt-24 mt-sm-10 mb-20 mb-sm-16">
         <div class="container">
             <h2 class="fs-12 fs-sm-6 fw-bold ps-4 h2-style-1">部落格</h2>
