--- a/pages/blogPage.html
+++ b/pages/blogPage.html
@@ -44,24 +44,24 @@
           <div class="col-8 col-md-9 col-sm content mb-6 pb-4 me-3 me-sm-0 mb-sm-0 pb-sm-0">
             <h2 class="fs-12 fs-sm-6">情人特別企劃</h2>
             <p class="fs-6 mb-6 fs-sm-4">2020 Valentine’s Special</p>
-            <ul>
-              <li class="mb-10 mb-md-6 mb-sm-4">
+            <div>
+              <div class="mb-10 mb-md-6 mb-sm-4">
                 <div class="img img-1 mb-2"></div>
                 <p class="fw-normal">一年一度西洋情人節即將到來，我們推出最強「情人節企劃」，為這個甜蜜的節日加溫。<br> 本次拍攝的鏡框款式與 NEEDS CLASSIC 聯名設計款，偶爾跟另一半來個低調情侶單品，結合彼此喜好、找出合適框型款式，在這個春夏輕鬆搭出屬於你們的甜蜜默契！</p>
-              </li>
-              <li class="mb-10 mb-md-6 mb-sm-4">
+              </div>
+              <div class="mb-10 mb-md-6 mb-sm-4">
                 <div class="img img-2 mb-2"></div>
                 <p class="fw-normal">一年一度西洋情人節即將到來，我們推出最強「情人節企劃」，為這個甜蜜的節日加溫。<br> 本次拍攝的鏡框款式與 NEEDS CLASSIC 聯名設計款，偶爾跟另一半來個低調情侶單品，結合彼此喜好、找出合適框型款式，在這個春夏輕鬆搭出屬於你們的甜蜜默契！</p>
-              </li>
-              <li class="mb-10 mb-md-6 mb-sm-4">
+              </div>
+              <div class="mb-10 mb-md-6 mb-sm-4">
                 <div class="img img-3 mb-2"></div>
                 <p class="fw-normal">一年一度西洋情人節即將到來，我們推出最強「情人節企劃」，為這個甜蜜的節日加溫。<br> 本次拍攝的鏡框款式與 NEEDS CLASSIC 聯名設計款，偶爾跟另一半來個低調情侶單品，結合彼此喜好、找出合適框型款式，在這個春夏輕鬆搭出屬於你們的甜蜜默契！</p>
-              </li>
-              <li class="mb-10 mb-md-6 mb-sm-0">
+              </div>
+              <div class="mb-10 mb-md-6 mb-sm-0">
                 <div class="img img-4 mb-2"></div>
                 <p class="fw-normal">2/14(五)-2/20(日) <br> 至本店單筆消費滿2980元, 就送情人節限定眼鏡盒1個 <br> 期間優惠還有~~持他牌鏡框更換鏡片 <br> 薄型非球面鏡片折300元 <br> 濾藍光鏡片折500元 <br> 快快帶上另一半 <br> 讓彼此每一次睜開眼，都被愛的視線包圍!</p>
-              </li>
-            </ul>
+              </div>
+            </div>
             <div class="d-flex d-sm-none">
               <p class="me-6">Share</p>
               <a href=""><img class="me-6 shareImg" src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/logo-facebook.png?raw=true" alt=""></a>
