--- a/pages/optical.html
+++ b/pages/optical.html
@@ -34,7 +34,7 @@
             <li class="col-3 mb-20 col-md-6 col-sm mb-md-6">
               <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/product-1.png?raw=true" alt="">
               <div class="d-flex justify-content-space-between">
-                <p class="fs-6">BJ41600S</p>
+                <h4 class="fs-6">BJ41600S</h4>
                 <p class="fs-6 text-second fw-500">NTD3,490</p>
               </div>
               <div class="d-flex">
@@ -45,7 +45,7 @@
             <li class="col-3 mb-20 col-md-6 col-sm mb-md-6">
               <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/product-2.png?raw=true" alt="">
               <div class="d-flex justify-content-space-between">
-                <p class="fs-6">BJ41600S</p>
+                <h4 class="fs-6">BJ41600S</h4>
                 <p class="fs-6 text-second fw-500">NTD3,490</p>
               </div>
               <div class="d-flex">
@@ -56,7 +56,7 @@
             <li class="col-3 mb-20 col-md-6 col-sm mb-md-6">
               <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/product-3.png?raw=true" alt="">
               <div class="d-flex justify-content-space-between">
-                <p class="fs-6">BJ41600S</p>
+                <h4 class="fs-6">BJ41600S</h4>
                 <p class="fs-6 text-second fw-500">NTD3,490</p>
               </div>
               <div class="d-flex">
@@ -67,7 +67,7 @@
             <li class="col-3 mb-20 col-md-6 col-sm mb-md-6">
               <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/product-4.png?raw=true" alt="">
               <div class="d-flex justify-content-space-between">
-                <p class="fs-6">BJ41600S</p>
+                <h4 class="fs-6">BJ41600S</h4>
                 <p class="fs-6 text-second fw-500">NTD3,490</p>
               </div>
               <div class="d-flex">
@@ -78,7 +78,7 @@
             <li class="col-3 mb-20 col-md-6 col-sm mb-md-6 mb-sm-16">
               <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/product-1.png?raw=true" alt="">
               <div class="d-flex justify-content-space-between">
-                <p class="fs-6">BJ41600S</p>
+                <h4 class="fs-6">BJ41600S</h4>
                 <p class="fs-6 text-second fw-500">NTD3,490</p>
               </div>
               <div class="d-flex">
@@ -89,7 +89,7 @@
             <li class="col-3 mb-20 col-md-6 col-sm mb-md-6 d-sm-none">
               <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/product-2.png?raw=true" alt="">
               <div class="d-flex justify-content-space-between">
-                <p class="fs-6">BJ41600S</p>
+                <h4 class="fs-6">BJ41600S</h4>
                 <p class="fs-6 text-second fw-500">NTD3,490</p>
               </div>
               <div class="d-flex">
@@ -100,7 +100,7 @@
             <li class="col-3 mb-20 col-md-6 col-sm mb-md-6 d-sm-none">
               <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/product-3.png?raw=true" alt="">
               <div class="d-flex justify-content-space-between">
-                <p class="fs-6">BJ41600S</p>
+                <h4 class="fs-6">BJ41600S</h4>
                 <p class="fs-6 text-second fw-500">NTD3,490</p>
               </div>
               <div class="d-flex">
@@ -111,7 +111,7 @@
             <li class="col-3 mb-20 col-md-6 col-sm mb-md-6 d-sm-none">
               <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/product-4.png?raw=true" alt="">
               <div class="d-flex justify-content-space-between">
-                <p class="fs-6">BJ41600S</p>
+                <h4 class="fs-6">BJ41600S</h4>
                 <p class="fs-6 text-second fw-500">NTD3,490</p>
               </div>
               <div class="d-flex">
@@ -122,7 +122,7 @@
             <li class="col-3 mb-20 col-md-6 col-sm mb-md-6 d-sm-none">
               <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/product-1.png?raw=true" alt="">
               <div class="d-flex justify-content-space-between">
-                <p class="fs-6">BJ41600S</p>
+                <h4 class="fs-6">BJ41600S</h4>
                 <p class="fs-6 text-second fw-500">NTD3,490</p>
               </div>
               <div class="d-flex">
@@ -133,7 +133,7 @@
             <li class="col-3 mb-20 col-md-6 col-sm mb-md-6 d-sm-none">
               <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/product-2.png?raw=true" alt="">
               <div class="d-flex justify-content-space-between">
-                <p class="fs-6">BJ41600S</p>
+                <h4 class="fs-6">BJ41600S</h4>
                 <p class="fs-6 text-second fw-500">NTD3,490</p>
               </div>
               <div class="d-flex">
@@ -144,7 +144,7 @@
             <li class="col-3 mb-20 col-md-6 col-sm mb-md-6 d-sm-none">
               <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/product-3.png?raw=true" alt="">
               <div class="d-flex justify-content-space-between">
-                <p class="fs-6">BJ41600S</p>
+                <h4 class="fs-6">BJ41600S</h4>
                 <p class="fs-6 text-second fw-500">NTD3,490</p>
               </div>
               <div class="d-flex">
@@ -155,7 +155,7 @@
             <li class="col-3 mb-20 col-md-6 col-sm mb-md-6 d-sm-none">
               <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/product-4.png?raw=true" alt="">
               <div class="d-flex justify-content-space-between">
-                <p class="fs-6">BJ41600S</p>
+                <h4 class="fs-6">BJ41600S</h4>
                 <p class="fs-6 text-second fw-500">NTD3,490</p>
               </div>
               <div class="d-flex">
