--- a/pages/store.html
+++ b/pages/store.html
@@ -29,7 +29,7 @@
             </div>
             <div class="d-flex justify-content-space-between flex-md-wrap">
                 <div class="col-5 col-md border-lg d-md-flex mb-md-6 d-sm-block">
-                    <img class="me-md-6" src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/store-1.png?raw=true" alt="">
+                    <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/store-1.png?raw=true" alt="">
                     <div class="border-md">
                         <h3 class="border-bottom fs-6">台北中山旗艦店</h3>
                         <ul class="content">
