--- a/pages/index.html
+++ b/pages/index.html
@@ -14,9 +14,9 @@
     <%- include('./layout/header'); -%>
 
     <div class="banner">
-      <div class="container">
-        <div class="d-flex justify-content-end">
-          <div class="py-74 text-end py-sm-36">
+      <div class="container h-100">
+        <div class="d-flex justify-content-end h-100 align-items-center">
+          <div class="text-end">
             <p class="fs-9 text-second fw-regular fs-sm-4">Promise-Desert 2020 早春系列</p>
             <h2 class="fs-16 text-second fw-bold fs-sm-6 mb-1 mb-sm-2">看得清，才能看得遠</h2>
             <a class="p-6-12 fs-5 bg-primary text-white" href="">立即購買</a>
@@ -65,15 +65,15 @@
           <ul class="d-flex justify-content-space-between flex-md-wrap">
             <li class="col-md d-md-flex align-items-md-center flex-md-direction-column mb-md-6">
               <img class="mb-2" src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section3-1.png?raw=true" alt="">
-              <h3 class="text-center fs-12 text-second font-style-italic fw-900"> OPTICAL</h3>
+              <h3 class="text-center fs-12 text-primary font-style-italic fw-900"> OPTICAL</h3>
             </li>
             <li class="col-md d-md-flex align-items-md-center flex-md-direction-column mb-md-6">
               <img class="mb-2" src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section3-2.png?raw=true" alt="">
-              <h3 class="text-center fs-12 text-second font-style-italic fw-900"> SUNGLASSES</h3>
+              <h3 class="text-center fs-12 text-primary font-style-italic fw-900"> SUNGLASSES</h3>
             </li>
             <li class="col-md d-md-flex align-items-md-center flex-md-direction-column">
               <img class="mb-2" src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section3-3.png?raw=true" alt="">
-              <h3 class="text-center fs-12 text-second font-style-italic fw-900"> FUNCTIONAL</h3>
+              <h3 class="text-center fs-12 text-primary font-style-italic fw-900"> FUNCTIONAL</h3>
             </li>
           </ul>
       </div>
@@ -84,11 +84,11 @@
           <ul class="d-flex flex-md-wrap">
             <li class="bg-white col-6 col-md mb-md-6">
               <div class="img img-double"></div>
-              <h3 class="fs-12 text-second text-center py-2">DOUBLE A+</h3>
+              <h3 class="fs-12 text-primary text-center py-2 font-style-italic">DOUBLE A+</h3>
             </li>
             <li class="bg-white col-6 col-md">
               <div class="img img-youth"></div>
-              <h3 class="fs-12 text-second text-center py-2">YOUTH</h3>
+              <h3 class="fs-12 text-primary text-center py-2 font-style-italic">YOUTH</h3>
             </li>
           </ul>
       </div>
@@ -104,7 +104,7 @@
                   <h3 class="fw-500 mb-2">Jessy</h3>
                   <p>眼鏡品質優良，下次還會想來這邊購買！</p>
                 </div>
-                <p class="fs-3-5 text-707070">2021/06/20</p>
+                <p class="fs-3-5 text-707070"><time>2021/06/20</time></p>
               </div>
             </li>
             <li class="col-3 col-sm col-md-6 mb-sm-4 mb-md-6 border">
@@ -114,7 +114,7 @@
                   <h3 class="fw-500 mb-2">凱倫</h3>
                   <p>做工細緻、鏡架很輕盈，待久也不會覺得有負擔，推薦給大家！</p>
                 </div>
-                <p class="fs-3-5 text-707070">2021/04/18</p>
+                <p class="fs-3-5 text-707070"><time>2021/04/18</time></p>
               </div>
             </li>
             <li class="col-3 col-sm col-md-6 mb-sm-4 border">
@@ -124,7 +124,7 @@
                   <h3 class="fw-500 mb-2">悠悠</h3>
                   <p>謝謝客服人員的詳細回答，成功買到了喜歡的眼鏡，下次會再回購！</p>
                 </div>
-                <p class="fs-3-5 text-707070">2020/12/25</p>
+                <p class="fs-3-5 text-707070"><time>2020/12/25</time></p>
               </div>
             </li>
             <li class="col-3 col-sm col-md-6 border">
@@ -134,7 +134,7 @@
                   <h3 class="fw-500 mb-2">Kyuan</h3>
                   <p>服務很好，品質沒有任何問題，非常喜歡。</p>
                 </div>
-                <p class="fs-3-5 text-707070">2020/10/31</p>
+                <p class="fs-3-5 text-707070"><time>2020/10/31</time></p>
               </div>
             </li>
           </ul>
@@ -155,8 +155,8 @@
               <input type="tel" placeholder="0912-345-678" id="phone" class="p-6-12 d-block col">
             </li>
             <li class="mb-4">
-              <label for="mail" class="mb-2 d-block" >電子郵件</label>
-              <input type="mail" placeholder="example@email.com" id="mail" class="p-6-12 d-block col">
+              <label for="email" class="mb-2 d-block" >電子郵件</label>
+              <input type="email" placeholder="example@email.com" id="email" class="p-6-12 d-block col">
             </li>
             <li class="mb-4">
               <label for="back" class="mb-2 d-block" >意見反應</label>
