--- a/blogPage.html
+++ b/blogPage.html
@@ -10,19 +10,19 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,0,0" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>blogPage</title>
-    <script type="module" crossorigin src="/2023HTML3-4/assets/main-72a52ca8.js"></script>
-    <link rel="stylesheet" href="/2023HTML3-4/assets/main-a04d0012.css">
+    <script type="module" crossorigin src="/2023HTML3-4/assets/main-47d0fde5.js"></script>
+    <link rel="stylesheet" href="/2023HTML3-4/assets/main-e012437c.css">
   </head>
   <body>
     <div class="header">
     <div class="container">
         <div class="d-flex justify-content-space-between align-items-center flex-sm-direction-column align-items-self-sm-start">
-            <h1 class="mt-sm-3"><a href="../pages/index.html"><img class="logo" src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/logo-white.png?raw=true" alt=""></a></h1>
-            <ul class="d-flex align-items-center py-25 flex-sm-wrap">
-                <li class="me-16"><a class="fs-5 fs-sm-4 text-white" href="../pages/optical.html">系列鏡框</a></li>
-                <li class="me-16"><a class="fs-5 fs-sm-4 text-white" href="../pages/address.html">門市據點</a></li>
-                <li class="me-16"><a class="fs-5 fs-sm-4 text-white" href="../pages/blog.html">部落格</a></li>
-                <li><a class="fs-5 fs-sm-4 text-white" href="../pages/question.html">常見問題</a></li>
+            <h1 class="mt-sm-3"><a href="../index.html"><img class="logo" src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/logo-white.png?raw=true" alt=""></a></h1>
+            <ul class="d-flex align-items-center  flex-sm-wrap">
+                <li><a class="d-block py-25 ps-8 pe-8 fs-5 fs-sm-4 text-white" href="../optical.html">系列鏡框</a></li>
+                <li><a class="d-block py-25 ps-8 pe-8 fs-5 fs-sm-4 text-white" href="../address.html">門市據點</a></li>
+                <li><a class="d-block py-25 ps-8 pe-8 fs-5 fs-sm-4 text-white" href="../blog.html">部落格</a></li>
+                <li><a class="d-block py-25 ps-8 pe-8 fs-5 fs-sm-4 text-white" href="../question.html">常見問題</a></li>
             </ul>
         </div>
     </div>
@@ -63,24 +63,24 @@
           <div class="col-8 col-md-9 col-sm content mb-6 pb-4 me-3 me-sm-0 mb-sm-0 pb-sm-0">
             <h2 class="fs-12 fs-sm-6">情人特別企劃</h2>
             <p class="fs-6 mb-6 fs-sm-4">2020 Valentine’s Special</p>
-            <ul>
-              <li class="mb-10 mb-md-6 mb-sm-4">
+            <div>
+              <div class="mb-10 mb-md-6 mb-sm-4">
                 <div class="img img-1 mb-2"></div>
                 <p class="fw-normal">一年一度西洋情人節即將到來，我們推出最強「情人節企劃」，為這個甜蜜的節日加溫。<br> 本次拍攝的鏡框款式與 NEEDS CLASSIC 聯名設計款，偶爾跟另一半來個低調情侶單品，結合彼此喜好、找出合適框型款式，在這個春夏輕鬆搭出屬於你們的甜蜜默契！</p>
-              </li>
-              <li class="mb-10 mb-md-6 mb-sm-4">
+              </div>
+              <div class="mb-10 mb-md-6 mb-sm-4">
                 <div class="img img-2 mb-2"></div>
                 <p class="fw-normal">一年一度西洋情人節即將到來，我們推出最強「情人節企劃」，為這個甜蜜的節日加溫。<br> 本次拍攝的鏡框款式與 NEEDS CLASSIC 聯名設計款，偶爾跟另一半來個低調情侶單品，結合彼此喜好、找出合適框型款式，在這個春夏輕鬆搭出屬於你們的甜蜜默契！</p>
-              </li>
-              <li class="mb-10 mb-md-6 mb-sm-4">
+              </div>
+              <div class="mb-10 mb-md-6 mb-sm-4">
                 <div class="img img-3 mb-2"></div>
                 <p class="fw-normal">一年一度西洋情人節即將到來，我們推出最強「情人節企劃」，為這個甜蜜的節日加溫。<br> 本次拍攝的鏡框款式與 NEEDS CLASSIC 聯名設計款，偶爾跟另一半來個低調情侶單品，結合彼此喜好、找出合適框型款式，在這個春夏輕鬆搭出屬於你們的甜蜜默契！</p>
-              </li>
-              <li class="mb-10 mb-md-6 mb-sm-0">
+              </div>
+              <div class="mb-10 mb-md-6 mb-sm-0">
                 <div class="img img-4 mb-2"></div>
                 <p class="fw-normal">2/14(五)-2/20(日) <br> 至本店單筆消費滿2980元, 就送情人節限定眼鏡盒1個 <br> 期間優惠還有~~持他牌鏡框更換鏡片 <br> 薄型非球面鏡片折300元 <br> 濾藍光鏡片折500元 <br> 快快帶上另一半 <br> 讓彼此每一次睜開眼，都被愛的視線包圍!</p>
-              </li>
-            </ul>
+              </div>
+            </div>
             <div class="d-flex d-sm-none">
               <p class="me-6">Share</p>
               <a href=""><img class="me-6 shareImg" src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/logo-facebook.png?raw=true" alt=""></a>
@@ -116,17 +116,17 @@
     <div class="container">
         <div class="d-flex justify-content-space-between pt-12 pt-sm-6">
             <ul class="d-flex align-items-center d-sm-none">
-                <li class="me-12"><a href="../pages/index.html">首頁</a></li>
-                <li class="me-12"><a href="../pages/optical.html">系列鏡框</a></li>
-                <li class="me-12"><a href="../pages/address.html">門市據點</a></li>
-                <li class="me-12"><a href="../pages/blog.html">部落格</a></li>
-                <li ><a href="../pages/question.html">常見問題</a></li>
+                <li><a class="d-block pe-6" href="../index.html">首頁</a></li>
+                <li><a class="ps-6 d-block pe-6" href="../optical.html">系列鏡框</a></li>
+                <li><a class="ps-6 d-block pe-6" href="../address.html">門市據點</a></li>
+                <li><a class="ps-6 d-block pe-6" href="../blog.html">部落格</a></li>
+                <li><a class="ps-6 d-block pe-6" href="../question.html">常見問題</a></li>
             </ul>
             <ul class="d-sm-block d-none">
-                <li><a class="mb-sm-2 d-flex align-items-center" href=""> <span class="material-symbols-rounded me-5">
+                <li><a class="mb-sm-2 d-flex align-items-center"  href="tel:0800-000-000"> <span class="material-symbols-rounded me-5">
                     call
                     </span> 0800-000-000</a></li>
-                <li><a class=" d-flex align-items-center" href=""><span class="material-symbols-rounded  me-5">
+                <li><a class=" d-flex align-items-center" href="mailto:glasses@business.com"><span class="material-symbols-rounded  me-5">
                     mail
                     </span> glasses@business.com</a></li>
             </ul>
@@ -149,8 +149,8 @@
         <div class="align-items-self-sm-start flex-sm-direction-column  d-flex justify-content-space-between border-white align-items-center mt-8 mt-sm-6">
             <p class="text-white fs-3-5 fs-sm-4 pt-8 pt-sm-4 mb-sm-2">Copyright © 2020 Glasses.All rights reserved.</p>
             <ul class="d-flex pt-8 pt-sm-0 pt-sm-4 flex-sm-direction-column">
-                <li class="me-12 fs-3-5 fs-sm-4 mb-sm-2"><a href="">隱私權政策</a></li>
-                <li class="fs-3-5 fs-sm-4"><a href="">服務條款</a></li>
+                <li class="fs-3-5 fs-sm-4 mb-sm-2"><a class="pe-6 ps-6" href="">隱私權政策</a></li>
+                <li class="fs-3-5 fs-sm-4"><a class=" ps-6" href="">服務條款</a></li>
             </ul>
         </div>
     </div>
