--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
     <title>index</title>
-    <script type="module" crossorigin src="/2023HTML3-4/assets/main-72a52ca8.js"></script>
-    <link rel="stylesheet" href="/2023HTML3-4/assets/main-a04d0012.css">
+    <script type="module" crossorigin src="/2023HTML3-4/assets/main-47d0fde5.js"></script>
+    <link rel="stylesheet" href="/2023HTML3-4/assets/main-e012437c.css">
   </head>
   <body>
     <div class="header">
     <div class="container">
         <div class="d-flex justify-content-space-between align-items-center flex-sm-direction-column align-items-self-sm-start">
-            <h1 class="mt-sm-3"><a href="../pages/index.html"><img class="logo" src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/logo-white.png?raw=true" alt=""></a></h1>
-            <ul class="d-flex align-items-center py-25 flex-sm-wrap">
-                <li class="me-16"><a class="fs-5 fs-sm-4 text-white" href="../pages/optical.html">系列鏡框</a></li>
-                <li class="me-16"><a class="fs-5 fs-sm-4 text-white" href="../pages/address.html">門市據點</a></li>
-                <li class="me-16"><a class="fs-5 fs-sm-4 text-white" href="../pages/blog.html">部落格</a></li>
-                <li><a class="fs-5 fs-sm-4 text-white" href="../pages/question.html">常見問題</a></li>
+            <h1 class="mt-sm-3"><a href="../index.html"><img class="logo" src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/logo-white.png?raw=true" alt=""></a></h1>
+            <ul class="d-flex align-items-center  flex-sm-wrap">
+                <li><a class="d-block py-25 ps-8 pe-8 fs-5 fs-sm-4 text-white" href="../optical.html">系列鏡框</a></li>
+                <li><a class="d-block py-25 ps-8 pe-8 fs-5 fs-sm-4 text-white" href="../address.html">門市據點</a></li>
+                <li><a class="d-block py-25 ps-8 pe-8 fs-5 fs-sm-4 text-white" href="../blog.html">部落格</a></li>
+                <li><a class="d-block py-25 ps-8 pe-8 fs-5 fs-sm-4 text-white" href="../question.html">常見問題</a></li>
             </ul>
         </div>
     </div>
@@ -33,9 +33,9 @@
 <a href="about.html">about</a>
 <a href="contact.html">contact</a> -->
     <div class="banner">
-      <div class="container">
-        <div class="d-flex justify-content-end">
-          <div class="py-74 text-end py-sm-36">
+      <div class="container h-100">
+        <div class="d-flex justify-content-end h-100 align-items-center">
+          <div class="text-end">
             <p class="fs-9 text-second fw-regular fs-sm-4">Promise-Desert 2020 早春系列</p>
             <h2 class="fs-16 text-second fw-bold fs-sm-6 mb-1 mb-sm-2">看得清，才能看得遠</h2>
             <a class="p-6-12 fs-5 bg-primary text-white" href="">立即購買</a>
@@ -84,15 +84,15 @@
           <ul class="d-flex justify-content-space-between flex-md-wrap">
             <li class="col-md d-md-flex align-items-md-center flex-md-direction-column mb-md-6">
               <img class="mb-2" src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section3-1.png?raw=true" alt="">
-              <h3 class="text-center fs-12 text-second font-style-italic fw-900"> OPTICAL</h3>
+              <h3 class="text-center fs-12 text-primary font-style-italic fw-900"> OPTICAL</h3>
             </li>
             <li class="col-md d-md-flex align-items-md-center flex-md-direction-column mb-md-6">
               <img class="mb-2" src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section3-2.png?raw=true" alt="">
-              <h3 class="text-center fs-12 text-second font-style-italic fw-900"> SUNGLASSES</h3>
+              <h3 class="text-center fs-12 text-primary font-style-italic fw-900"> SUNGLASSES</h3>
             </li>
             <li class="col-md d-md-flex align-items-md-center flex-md-direction-column">
               <img class="mb-2" src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section3-3.png?raw=true" alt="">
-              <h3 class="text-center fs-12 text-second font-style-italic fw-900"> FUNCTIONAL</h3>
+              <h3 class="text-center fs-12 text-primary font-style-italic fw-900"> FUNCTIONAL</h3>
             </li>
           </ul>
       </div>
@@ -103,11 +103,11 @@
           <ul class="d-flex flex-md-wrap">
             <li class="bg-white col-6 col-md mb-md-6">
               <div class="img img-double"></div>
-              <h3 class="fs-12 text-second text-center py-2">DOUBLE A+</h3>
+              <h3 class="fs-12 text-primary text-center py-2 font-style-italic">DOUBLE A+</h3>
             </li>
             <li class="bg-white col-6 col-md">
               <div class="img img-youth"></div>
-              <h3 class="fs-12 text-second text-center py-2">YOUTH</h3>
+              <h3 class="fs-12 text-primary text-center py-2 font-style-italic">YOUTH</h3>
             </li>
           </ul>
       </div>
@@ -123,7 +123,7 @@
                   <h3 class="fw-500 mb-2">Jessy</h3>
                   <p>眼鏡品質優良，下次還會想來這邊購買！</p>
                 </div>
-                <p class="fs-3-5 text-707070">2021/06/20</p>
+                <p class="fs-3-5 text-707070"><time>2021/06/20</time></p>
               </div>
             </li>
             <li class="col-3 col-sm col-md-6 mb-sm-4 mb-md-6 border">
@@ -133,7 +133,7 @@
                   <h3 class="fw-500 mb-2">凱倫</h3>
                   <p>做工細緻、鏡架很輕盈，待久也不會覺得有負擔，推薦給大家！</p>
                 </div>
-                <p class="fs-3-5 text-707070">2021/04/18</p>
+                <p class="fs-3-5 text-707070"><time>2021/04/18</time></p>
               </div>
             </li>
             <li class="col-3 col-sm col-md-6 mb-sm-4 border">
@@ -143,7 +143,7 @@
                   <h3 class="fw-500 mb-2">悠悠</h3>
                   <p>謝謝客服人員的詳細回答，成功買到了喜歡的眼鏡，下次會再回購！</p>
                 </div>
-                <p class="fs-3-5 text-707070">2020/12/25</p>
+                <p class="fs-3-5 text-707070"><time>2020/12/25</time></p>
               </div>
             </li>
             <li class="col-3 col-sm col-md-6 border">
@@ -153,7 +153,7 @@
                   <h3 class="fw-500 mb-2">Kyuan</h3>
                   <p>服務很好，品質沒有任何問題，非常喜歡。</p>
                 </div>
-                <p class="fs-3-5 text-707070">2020/10/31</p>
+                <p class="fs-3-5 text-707070"><time>2020/10/31</time></p>
               </div>
             </li>
           </ul>
@@ -174,8 +174,8 @@
               <input type="tel" placeholder="0912-345-678" id="phone" class="p-6-12 d-block col">
             </li>
             <li class="mb-4">
-              <label for="mail" class="mb-2 d-block" >電子郵件</label>
-              <input type="mail" placeholder="example@email.com" id="mail" class="p-6-12 d-block col">
+              <label for="email" class="mb-2 d-block" >電子郵件</label>
+              <input type="email" placeholder="example@email.com" id="email" class="p-6-12 d-block col">
             </li>
             <li class="mb-4">
               <label for="back" class="mb-2 d-block" >意見反應</label>
@@ -196,17 +196,17 @@
     <div class="container">
         <div class="d-flex justify-content-space-between pt-12 pt-sm-6">
             <ul class="d-flex align-items-center d-sm-none">
-                <li class="me-12"><a href="../pages/index.html">首頁</a></li>
-                <li class="me-12"><a href="../pages/optical.html">系列鏡框</a></li>
-                <li class="me-12"><a href="../pages/address.html">門市據點</a></li>
-                <li class="me-12"><a href="../pages/blog.html">部落格</a></li>
-                <li ><a href="../pages/question.html">常見問題</a></li>
+                <li><a class="d-block pe-6" href="../index.html">首頁</a></li>
+                <li><a class="ps-6 d-block pe-6" href="../optical.html">系列鏡框</a></li>
+                <li><a class="ps-6 d-block pe-6" href="../address.html">門市據點</a></li>
+                <li><a class="ps-6 d-block pe-6" href="../blog.html">部落格</a></li>
+                <li><a class="ps-6 d-block pe-6" href="../question.html">常見問題</a></li>
             </ul>
             <ul class="d-sm-block d-none">
-                <li><a class="mb-sm-2 d-flex align-items-center" href=""> <span class="material-symbols-rounded me-5">
+                <li><a class="mb-sm-2 d-flex align-items-center"  href="tel:0800-000-000"> <span class="material-symbols-rounded me-5">
                     call
                     </span> 0800-000-000</a></li>
-                <li><a class=" d-flex align-items-center" href=""><span class="material-symbols-rounded  me-5">
+                <li><a class=" d-flex align-items-center" href="mailto:glasses@business.com"><span class="material-symbols-rounded  me-5">
                     mail
                     </span> glasses@business.com</a></li>
             </ul>
@@ -229,8 +229,8 @@
         <div class="align-items-self-sm-start flex-sm-direction-column  d-flex justify-content-space-between border-white align-items-center mt-8 mt-sm-6">
             <p class="text-white fs-3-5 fs-sm-4 pt-8 pt-sm-4 mb-sm-2">Copyright © 2020 Glasses.All rights reserved.</p>
             <ul class="d-flex pt-8 pt-sm-0 pt-sm-4 flex-sm-direction-column">
-                <li class="me-12 fs-3-5 fs-sm-4 mb-sm-2"><a href="">隱私權政策</a></li>
-                <li class="fs-3-5 fs-sm-4"><a href="">服務條款</a></li>
+                <li class="fs-3-5 fs-sm-4 mb-sm-2"><a class="pe-6 ps-6" href="">隱私權政策</a></li>
+                <li class="fs-3-5 fs-sm-4"><a class=" ps-6" href="">服務條款</a></li>
             </ul>
         </div>
     </div>
