--- a/optical.html
+++ b/optical.html
@@ -9,19 +9,19 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,0,0" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>optical</title>
-    <script type="module" crossorigin src="/2023HTML3-4/assets/main-72a52ca8.js"></script>
-    <link rel="stylesheet" href="/2023HTML3-4/assets/main-a04d0012.css">
+    <script type="module" crossorigin src="/2023HTML3-4/assets/main-47d0fde5.js"></script>
+    <link rel="stylesheet" href="/2023HTML3-4/assets/main-e012437c.css">
   </head>
   <body>
     <div class="header">
     <div class="container">
         <div class="d-flex justify-content-space-between align-items-center flex-sm-direction-column align-items-self-sm-start">
-            <h1 class="mt-sm-3"><a href="../pages/index.html"><img class="logo" src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/logo-white.png?raw=true" alt=""></a></h1>
-            <ul class="d-flex align-items-center py-25 flex-sm-wrap">
-                <li class="me-16"><a class="fs-5 fs-sm-4 text-white" href="../pages/optical.html">系列鏡框</a></li>
-                <li class="me-16"><a class="fs-5 fs-sm-4 text-white" href="../pages/address.html">門市據點</a></li>
-                <li class="me-16"><a class="fs-5 fs-sm-4 text-white" href="../pages/blog.html">部落格</a></li>
-                <li><a class="fs-5 fs-sm-4 text-white" href="../pages/question.html">常見問題</a></li>
+            <h1 class="mt-sm-3"><a href="../index.html"><img class="logo" src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/logo-white.png?raw=true" alt=""></a></h1>
+            <ul class="d-flex align-items-center  flex-sm-wrap">
+                <li><a class="d-block py-25 ps-8 pe-8 fs-5 fs-sm-4 text-white" href="../optical.html">系列鏡框</a></li>
+                <li><a class="d-block py-25 ps-8 pe-8 fs-5 fs-sm-4 text-white" href="../address.html">門市據點</a></li>
+                <li><a class="d-block py-25 ps-8 pe-8 fs-5 fs-sm-4 text-white" href="../blog.html">部落格</a></li>
+                <li><a class="d-block py-25 ps-8 pe-8 fs-5 fs-sm-4 text-white" href="../question.html">常見問題</a></li>
             </ul>
         </div>
     </div>
@@ -53,7 +53,7 @@
             <li class="col-3 mb-20 col-md-6 col-sm mb-md-6">
               <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/product-1.png?raw=true" alt="">
               <div class="d-flex justify-content-space-between">
-                <p class="fs-6">BJ41600S</p>
+                <h4 class="fs-6">BJ41600S</h4>
                 <p class="fs-6 text-second fw-500">NTD3,490</p>
               </div>
               <div class="d-flex">
@@ -64,7 +64,7 @@
             <li class="col-3 mb-20 col-md-6 col-sm mb-md-6">
               <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/product-2.png?raw=true" alt="">
               <div class="d-flex justify-content-space-between">
-                <p class="fs-6">BJ41600S</p>
+                <h4 class="fs-6">BJ41600S</h4>
                 <p class="fs-6 text-second fw-500">NTD3,490</p>
               </div>
               <div class="d-flex">
@@ -75,7 +75,7 @@
             <li class="col-3 mb-20 col-md-6 col-sm mb-md-6">
               <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/product-3.png?raw=true" alt="">
               <div class="d-flex justify-content-space-between">
-                <p class="fs-6">BJ41600S</p>
+                <h4 class="fs-6">BJ41600S</h4>
                 <p class="fs-6 text-second fw-500">NTD3,490</p>
               </div>
               <div class="d-flex">
@@ -86,7 +86,7 @@
             <li class="col-3 mb-20 col-md-6 col-sm mb-md-6">
               <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/product-4.png?raw=true" alt="">
               <div class="d-flex justify-content-space-between">
-                <p class="fs-6">BJ41600S</p>
+                <h4 class="fs-6">BJ41600S</h4>
                 <p class="fs-6 text-second fw-500">NTD3,490</p>
               </div>
               <div class="d-flex">
@@ -97,7 +97,7 @@
             <li class="col-3 mb-20 col-md-6 col-sm mb-md-6 mb-sm-16">
               <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/product-1.png?raw=true" alt="">
               <div class="d-flex justify-content-space-between">
-                <p class="fs-6">BJ41600S</p>
+                <h4 class="fs-6">BJ41600S</h4>
                 <p class="fs-6 text-second fw-500">NTD3,490</p>
               </div>
               <div class="d-flex">
@@ -108,7 +108,7 @@
             <li class="col-3 mb-20 col-md-6 col-sm mb-md-6 d-sm-none">
               <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/product-2.png?raw=true" alt="">
               <div class="d-flex justify-content-space-between">
-                <p class="fs-6">BJ41600S</p>
+                <h4 class="fs-6">BJ41600S</h4>
                 <p class="fs-6 text-second fw-500">NTD3,490</p>
               </div>
               <div class="d-flex">
@@ -119,7 +119,7 @@
             <li class="col-3 mb-20 col-md-6 col-sm mb-md-6 d-sm-none">
               <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/product-3.png?raw=true" alt="">
               <div class="d-flex justify-content-space-between">
-                <p class="fs-6">BJ41600S</p>
+                <h4 class="fs-6">BJ41600S</h4>
                 <p class="fs-6 text-second fw-500">NTD3,490</p>
               </div>
               <div class="d-flex">
@@ -130,7 +130,7 @@
             <li class="col-3 mb-20 col-md-6 col-sm mb-md-6 d-sm-none">
               <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/product-4.png?raw=true" alt="">
               <div class="d-flex justify-content-space-between">
-                <p class="fs-6">BJ41600S</p>
+                <h4 class="fs-6">BJ41600S</h4>
                 <p class="fs-6 text-second fw-500">NTD3,490</p>
               </div>
               <div class="d-flex">
@@ -141,7 +141,7 @@
             <li class="col-3 mb-20 col-md-6 col-sm mb-md-6 d-sm-none">
               <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/product-1.png?raw=true" alt="">
               <div class="d-flex justify-content-space-between">
-                <p class="fs-6">BJ41600S</p>
+                <h4 class="fs-6">BJ41600S</h4>
                 <p class="fs-6 text-second fw-500">NTD3,490</p>
               </div>
               <div class="d-flex">
@@ -152,7 +152,7 @@
             <li class="col-3 mb-20 col-md-6 col-sm mb-md-6 d-sm-none">
               <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/product-2.png?raw=true" alt="">
               <div class="d-flex justify-content-space-between">
-                <p class="fs-6">BJ41600S</p>
+                <h4 class="fs-6">BJ41600S</h4>
                 <p class="fs-6 text-second fw-500">NTD3,490</p>
               </div>
               <div class="d-flex">
@@ -163,7 +163,7 @@
             <li class="col-3 mb-20 col-md-6 col-sm mb-md-6 d-sm-none">
               <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/product-3.png?raw=true" alt="">
               <div class="d-flex justify-content-space-between">
-                <p class="fs-6">BJ41600S</p>
+                <h4 class="fs-6">BJ41600S</h4>
                 <p class="fs-6 text-second fw-500">NTD3,490</p>
               </div>
               <div class="d-flex">
@@ -174,7 +174,7 @@
             <li class="col-3 mb-20 col-md-6 col-sm mb-md-6 d-sm-none">
               <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/product-4.png?raw=true" alt="">
               <div class="d-flex justify-content-space-between">
-                <p class="fs-6">BJ41600S</p>
+                <h4 class="fs-6">BJ41600S</h4>
                 <p class="fs-6 text-second fw-500">NTD3,490</p>
               </div>
               <div class="d-flex">
@@ -201,17 +201,17 @@
     <div class="container">
         <div class="d-flex justify-content-space-between pt-12 pt-sm-6">
             <ul class="d-flex align-items-center d-sm-none">
-                <li class="me-12"><a href="../pages/index.html">首頁</a></li>
-                <li class="me-12"><a href="../pages/optical.html">系列鏡框</a></li>
-                <li class="me-12"><a href="../pages/address.html">門市據點</a></li>
-                <li class="me-12"><a href="../pages/blog.html">部落格</a></li>
-                <li ><a href="../pages/question.html">常見問題</a></li>
+                <li><a class="d-block pe-6" href="../index.html">首頁</a></li>
+                <li><a class="ps-6 d-block pe-6" href="../optical.html">系列鏡框</a></li>
+                <li><a class="ps-6 d-block pe-6" href="../address.html">門市據點</a></li>
+                <li><a class="ps-6 d-block pe-6" href="../blog.html">部落格</a></li>
+                <li><a class="ps-6 d-block pe-6" href="../question.html">常見問題</a></li>
             </ul>
             <ul class="d-sm-block d-none">
-                <li><a class="mb-sm-2 d-flex align-items-center" href=""> <span class="material-symbols-rounded me-5">
+                <li><a class="mb-sm-2 d-flex align-items-center"  href="tel:0800-000-000"> <span class="material-symbols-rounded me-5">
                     call
                     </span> 0800-000-000</a></li>
-                <li><a class=" d-flex align-items-center" href=""><span class="material-symbols-rounded  me-5">
+                <li><a class=" d-flex align-items-center" href="mailto:glasses@business.com"><span class="material-symbols-rounded  me-5">
                     mail
                     </span> glasses@business.com</a></li>
             </ul>
@@ -234,8 +234,8 @@
         <div class="align-items-self-sm-start flex-sm-direction-column  d-flex justify-content-space-between border-white align-items-center mt-8 mt-sm-6">
             <p class="text-white fs-3-5 fs-sm-4 pt-8 pt-sm-4 mb-sm-2">Copyright © 2020 Glasses.All rights reserved.</p>
             <ul class="d-flex pt-8 pt-sm-0 pt-sm-4 flex-sm-direction-column">
-                <li class="me-12 fs-3-5 fs-sm-4 mb-sm-2"><a href="">隱私權政策</a></li>
-                <li class="fs-3-5 fs-sm-4"><a href="">服務條款</a></li>
+                <li class="fs-3-5 fs-sm-4 mb-sm-2"><a class="pe-6 ps-6" href="">隱私權政策</a></li>
+                <li class="fs-3-5 fs-sm-4"><a class=" ps-6" href="">服務條款</a></li>
             </ul>
         </div>
     </div>
